--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body{
     body{
         background-image: url('./starter-code/assets/home/background-home-mobile.jpg');
         background-repeat: no-repeat;
-        background-size:auto;
+        background-size:cover;
         height: 100%;
     } 
 }
