--- a/src/Pages/Pages.css
+++ b/src/Pages/Pages.css
@@ -897,7 +897,7 @@ li {
 
 
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 425px) {
 
 
     /*-------------NAVBAR MOBILE-------------*/
@@ -1061,12 +1061,7 @@ li {
         width: 170px;
         height: 170px;
         margin: 0;
-        margin-bottom: 36px;
-    }
-
-    
-    .destinatiopPage .destChil2  .nav{
-        margin-top: 26px;
+        margin-bottom: 15%;
     }
 
     .destinatiopPage .destChil2  .nav .navbar{
