--- a/src/Pages/Pages.css
+++ b/src/Pages/Pages.css
@@ -131,7 +131,7 @@ nav ul li a {
 }
 
 .home .homeChil div h1 {
-    font-size: 150px;
+    font-size: 9em;
     margin: 0;
     font-family: 'Bellefair';
 }
