--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,12 @@ body{
     } 
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 425px) and (min-width: 375px){
     body{
         background-image: url('./starter-code/assets/home/background-home-mobile.jpg');
         background-repeat: no-repeat;
-        background-size:cover;
-        height: 110%;
+        background-size: cover;
+        height: 100vh;
     } 
 }
 
