--- a/src/Pages/Pages.css
+++ b/src/Pages/Pages.css
@@ -210,6 +210,7 @@ nav ul li a {
     width: 50%;
     justify-content: justify;
     height: 50vh;
+    margin-bottom: 15%;
 }
 
 .destinatiopPage .destChil2 .itens {
@@ -1064,6 +1065,7 @@ li {
         margin-bottom: 20%;
     }
 
+
     .destinatiopPage .destChil2  .nav .navbar{
         margin: 0;
     }
@@ -1105,6 +1107,11 @@ li {
         flex-direction: column;
         margin-top: 32px;
         padding-top: 32px;
+    }
+
+    
+    .destinatiopPage .destChil2 .infoPlanet2 .chil2{
+        margin-bottom: 10%;
     }
 
 
