--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,22 @@ body{
     background-size: cover;
 }
 
+@media screen and (max-width: 1024px) {
+    body{
+        background-image: url('./starter-code/assets/home/background-home-desktop.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100%;
+    } 
+}
+
+
 @media screen and (max-width: 768px) {
     body{
         background-image: url('./starter-code/assets/home/background-home-tablet.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100%;
+        height: 100vh;
     } 
 }
 
@@ -18,8 +28,9 @@ body{
         background-image: url('./starter-code/assets/home/background-home-mobile.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100%;
-
+        width: 100vw;
+        height: 100vh;
+        scroll-behavior: auto;
     } 
 }
 
